feat(vondi): add BUTTONS directive, thinking heartbeat, vondi skills, CI
## Core features

**BUTTONS: directive** — parse inline Telegram keyboard from claude-cli agent output.
Since claude-cli backend disables all tools (including message tool), inline
keyboards are impossible via standard API. Solution: parse text token BUTTONS:
with JSON array, strip from reply text, inject into channelData.telegram.buttons.
- src/media/parse.ts: splitButtonsFromOutput(), validate callback_data <= 64 bytes
- src/auto-reply/reply/reply-directives.ts: pipeline BUTTONS -> MEDIA -> directives
- src/auto-reply/reply/reply-delivery.ts: merge telegramButtons into channelData
- src/auto-reply/types.ts: TelegramInlineButtons in ReplyDirectiveParseResult

**Thinking Heartbeat** — periodic "still working" Telegram messages during long runs.
Typing indicator disappears after 2 min TTL; agent may run 30+ min on EAS builds.
Every 5 min, sends a silent message: "Думаю уже N мин, ещё работаю...".
- src/agents/cli-runner.ts: setInterval after spawn, clearInterval in finally
- src/auto-reply/reply/agent-runner-execution.ts: pass callback, skip for isHeartbeat
- src/auto-reply/types.ts: onThinkingHeartbeat, thinkingHeartbeatIntervalMs
- src/telegram/bot-message-dispatch.ts: silent heartbeat message handler

## Vondi skills (7 domain-specific skills for vondi.rs marketplace, Serbia)

vondi-marketplace, vondi-infra, vondi-db, vondi-mail, vondi-diagrams,
vondi-claude-sessions (with BUTTONS keyboard), vondi-mobile (Expo SDK 54)

## Infrastructure

- scripts/vondi-start.sh: production Supervisor start script
- .github/workflows/ci.yml: trimmed to self-hosted runners + 3 essential jobs
- removed 7 upstream-only workflows (docker, labeler, stale, install-smoke, etc.)

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,7 @@ apps/ios/LocalSigning.xcconfig
 # Generated protocol schema (produced via pnpm protocol:gen)
 dist/protocol.schema.json
 .ant-colony/
+
+# Vondi: local state and secrets (NOT committed)
+.openclaw/
+.env
