--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [main, 'feature/**', 'debug/**', 'hotfix/**']
   pull_request:
     branches: [main]
+  workflow_dispatch:
 
 concurrency:
   group: ci-openclaw-${{ github.ref }}
