ci: set TMPDIR to runner.temp for unit tests (k3s runners have noexec /tmp)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,3 +75,5 @@ jobs:
       - name: Run unit tests
         run: pnpm test:fast
         timeout-minutes: 25
+        env:
+          TMPDIR: ${{ runner.temp }}
