ci: create /tmp/openclaw symlink to fix noexec /tmp on k3s runners
resolvePreferredOpenClawTmpDir() returns fallback() when /tmp/openclaw
is a symlink (line 71: isSymbolicLink() check). The fallback uses
os.tmpdir() which respects TMPDIR env var set to runner.temp.
This allows media-understanding tests to write and execute shell scripts
on the non-noexec runner.temp filesystem.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Setup tmp dir for tests (k3s noexec /tmp workaround)
+        run: |
+          rm -rf /tmp/openclaw 2>/dev/null || true
+          mkdir -p "$RUNNER_TEMP/openclaw"
+          ln -sf "$RUNNER_TEMP/openclaw" /tmp/openclaw
+
       - name: Run unit tests
         run: pnpm test:fast
         timeout-minutes: 25
