--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [main, 'feature/**', 'debug/**', 'hotfix/**']
+    branches: [main, "feature/**", "debug/**", "hotfix/**"]
   pull_request:
     branches: [main]
+  workflow_dispatch:
 
 concurrency:
   group: ci-openclaw-${{ github.ref }}
@@ -20,8 +21,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
-          cache: false
+          node-version: "22"
 
       - name: Setup pnpm
         run: npm install -g pnpm@10.23.0
@@ -44,8 +44,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
-          cache: false
+          node-version: "22"
 
       - name: Setup pnpm
         run: npm install -g pnpm@10.23.0
@@ -65,8 +64,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
-          cache: false
+          node-version: "22"
 
       - name: Setup pnpm
         run: npm install -g pnpm@10.23.0
@@ -74,6 +72,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Setup tmp dir for tests (k3s noexec /tmp workaround)
+        run: |
+          rm -rf /tmp/openclaw 2>/dev/null || true
+          mkdir -p "$RUNNER_TEMP/openclaw"
+          ln -sf "$RUNNER_TEMP/openclaw" /tmp/openclaw
+
       - name: Run unit tests
-        run: pnpm vitest run --project unit
-        timeout-minutes: 5
+        run: pnpm test:fast
+        timeout-minutes: 25
+        env:
+          TMPDIR: ${{ runner.temp }}
